Closed Bug 420580 Opened 17 years ago Closed 17 years ago

missing padding for (content) dropdowns on XP

Categories

(Core :: Widget: Win32, defect, P2)

x86
Windows XP
defect

Tracking

()

VERIFIED FIXED
mozilla1.9beta5

People

(Reporter: zeniko, Assigned: zeniko)

References

()

Details

(Keywords: regression)

Attachments

(3 files)

Our dropdowns have always had 1px less padding for XP visual styles. With the changes by bug 418552, that's 1px too few for some of them (on Luna it's just 1px too few to look native, though).
IE7 is pretty much native, while Gecko seems to get quite confused by the different visual style (from <http://spaceqcg.deviantart.com/art/VistaCG-27363349>).
Attached patch minimal fixSplinter Review
The minimal fix would be to add the padding for all visual styles. Depending on how those dropdowns look on Vista, we might even want to add the padding for chrome widgets as well (or maybe only for !mIsVistaOrLater).
Attachment #306877 - Flags: superreview?
Attachment #306877 - Flags: review?
Attachment #306877 - Flags: superreview?(roc)
Attachment #306877 - Flags: superreview?
Attachment #306877 - Flags: review?(roc)
Attachment #306877 - Flags: review?
Adding to the screenshot from comment #1: When not focused, Gecko content doesn't display anything at all instead of the focus outline for this particular visual style. Not sure how broken dropdowns look in other visual styles...
Comment on attachment 306877 [details] [diff] [review] minimal fix Looks Ok but I feel like I should run this past someone else ...
Attachment #306877 - Flags: superreview?(roc)
Attachment #306877 - Flags: superreview+
Attachment #306877 - Flags: review?(vladimir)
Attachment #306877 - Flags: review?(roc)
Comment on attachment 306877 [details] [diff] [review] minimal fix Hm, so this is due to PaintFocus() drawing a background colored outline. This is needed for a vista-ish theme in use under XP? This fix looks fine, though this will change how we render these dropdowns under XP -- though from your screenshot it looks like we do want one more pixel everywhere.
Attachment #306877 - Flags: review?(vladimir) → review+
Attachment #306877 - Flags: approval1.9b4?
Attachment #306877 - Flags: approval1.9?
Not going to block beta 4 on this, and sadly it's too late for a patch.
Flags: blocking1.9+
Keywords: relnote
Priority: -- → P2
Target Milestone: --- → mozilla1.9
Attachment #306877 - Flags: approval1.9b4? → approval1.9b4-
Comment on attachment 306877 [details] [diff] [review] minimal fix This is a blocker. No approval1.9 needed.
Attachment #306877 - Flags: approval1.9?
Assignee: nobody → zeniko
Keywords: checkin-needed
Checking in widget/src/windows/nsNativeThemeWin.cpp; /cvsroot/mozilla/widget/src/windows/nsNativeThemeWin.cpp,v <-- nsNativeThemeWin.cpp new revision: 3.106; previous revision: 3.105 done
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: mozilla1.9 → mozilla1.9beta5
This is not relnote worthy.
Keywords: relnote
Depends on: 427122
verified fixed using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008050614 Minefield/3.0pre and Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9pre) Gecko/2008050606 Minefield/3.0pre ID:2008050606
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: