Bug 420580 - "missing padding for (content) dropdowns on XP" [p=zeniko@gmail.com (Simon Bünzli) r=vlad sr=roc a=blocking1.9+]